test/Interop/Cxx/templates/class-template-instantiation-typechecker-calls-method-with-error.code
// RUN: not %target-language-emit-ir %s -I %S/Inputs -enable-experimental-cxx-interop -disable-availability-checking 2>&1 | %FileCheck %s

import ClassTemplateInstantiationErrors

// CHECK: error: no member named 'doesNotExist' in 'IntWrapper'
// CHECK: note: in instantiation of member function 'CannotBeInstantianted<IntWrapper>::memberWrongType' requested here
public fn test() {
  var y = CannotBeInstantianted<IntWrapper>(IntWrapper())
  y.callsMethodWithError()
}
